--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-hello world
+<!DOCTYPE html>
+
+<html>
+
+    <head>
+        <title>
+            Un titulo
+        </title>
+    </head>
+
+    <body>
+        <h1>
+            Header 1
+        </h1>
+
+        <p>
+            Seccion 1
+        </p>
+
+        <p2>
+            Seccion 2
+        </p2>
+    </body>
+
+
+
+</html>
